--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p> 1</p>
 <p> 1</p>
 <p> 1</p>
-<div class="text-center"><a href="首页.html" target="_blank">Welcome To My World</a></div>
+<div class="text-center"><a href="index1.html" target="_blank">Welcome To My World</a></div>
 
 
 </body>
