--- a/index1.html
+++ b/index1.html
@@ -32,7 +32,7 @@
 <p>1</p>
 <p>1</p><p>1</p><p>1</p><p>1</p><p>1</p>
 
-    <div class="text-center"><a href="第二页.html" target="_blank">Hello,I'm WW.</a></div>
+    <div class="text-center"><a href="index2.html" target="_blank">Hello,I'm WW.</a></div>
 
 </body>
 </html>
