--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <p></p><p></p>
-<div class="text-center"><a href="" target="_blank">This's My University</a></div>
+<div class="text-center"><a href="index.html" target="_blank">This's My University</a></div>
 
 </body>
 </html>
